--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@
 # Copy this file to .env and customize paths for your environment
 
 # Path to FlexLibs stable repository (shallow wrapper, ~40 functions)
-FLEXLIBS_PATH=D:/Github/flexlibs
+FLEXLIBS_PATH=../flexlibs
 
 # Path to FlexLibs 2.0 repository (deep wrapper, ~1400 methods)
-FLEXLIBS2_PATH=D:/Github/flexlibs2
+FLEXLIBS2_PATH=..flexlibs2
 
 # Path to LibLCM repository (for source reference)
-LIBLCM_PATH=D:/Github/liblcm
+LIBLCM_PATH=../liblcm
 
 # Path to FieldWorks DLLs
 # Options:
@@ -18,10 +18,7 @@ LIBLCM_PATH=D:/Github/liblcm
 FIELDWORKS_DLL_PATH=C:/Program Files/SIL/FieldWorks 9
 
 # Path to FlexTools repository (for examples)
-FLEXTOOLS_PATH=D:/Github/FlexTools
+FLEXTOOLS_PATH=../FlexTools
 
 # Path to FieldWorks repository (for source reference)
-FIELDWORKS_PATH=D:/Github/Fieldworks
-
-# Path to FLExTools-Generator (for reference)
-FLEXTOOLS_GENERATOR_PATH=D:/Github/FLExTools-Generator
+FIELDWORKS_PATH=../Fieldworks
